# agent-interp-harness

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.claude/commands/: experiment.md
.github/workflows/: docs.yml
docs/: cli.md  glossary.md  index.md
docs/api/: config.md  shadow-git.md  state.md
docs/getting-started/: install.md  quickstart.md
docs/guide/: configuration.md  output.md  resampling.md  session-modes.md  subagents.md  web-ui.md
examples/: chained.yaml  isolated.yaml
experiments/: info_loss_no_subagents.yaml  info_mutation_pressure.yaml  memory_certainty_drift.yaml  memory_degradation_vuln_research.yaml  memory_laundering_hedging.yaml  nginx_security_audit.yaml  nginx_security_audit_or.yaml  subagent_info_loss_rce.yaml  subagent_laundering.yaml
src/harness/: __init__.py  atif_adapter.py  cli.py  config.py  experiment.py  proxy.py  replay.py  resample.py  resample_session.py  runner.py  shadow_git.py  state.py  transcript.py  uuid_map.py
tests/: conftest.py  smoke.yaml  smoke_2session.yaml  subagent.yaml  test_atif_adapter.py  test_config.py  test_replay.py  test_resample.py  test_shadow_git.py  test_shadow_git_worktree.py  test_state.py  test_transcript.py  test_uuid_map.py
ui/: README.md
ui/src/: app.css
ui/src/lib/components/chat/: ChatView.svelte  InputDiff.svelte  MessageEditor.svelte  ResamplePanel.svelte  StepGroup.svelte  SystemMessage.svelte  ThinkingBlock.svelte  (+2 more)
ui/src/lib/server/: fs.ts
ui/src/lib/types/: run.ts
ui/src/routes/: +layout.svelte  +page.svelte
(+1 files in other folders)
