[project]
name = "agentlens"
version = "0.1.0"
description = "Multi-session agent interpretability harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.45",
    "harbor>=0.1.45",
    "typer>=0.15",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
]

[project.scripts]
harness = "harness.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.ruff]
line-length = 100
